--- a/skills/csharp/calendarskill/wwwroot/manifest/manifest-1.1.json
+++ b/skills/csharp/calendarskill/wwwroot/manifest/manifest-1.1.json
@@ -231,6 +231,18 @@
           "type": "string",
           "description": "The location for the meeting"
         },
+        "meetingRoom": {
+          "type": "string",
+          "description": "The meeting room for the meeting"
+        },
+        "building": {
+          "type": "string",
+          "description": "Building of the meeting room"
+        },
+        "floorNumber": {
+          "type": "number",
+          "description": "Floor number of the meeting room"
+        },
         "timezone": {
           "type": "string",
           "description": "The timezone to create the meeting in"
@@ -371,6 +383,10 @@
         "timezone": {
           "type": "string",
           "description": "The timezone to create the meeting in"
+        },
+        "meetingRoom": {
+          "type": "string",
+          "description": "The meeting room for the meeting"
         },
         "actionSuccess": {
           "type": "boolean",
