--- a/skills/csharp/todoskill/wwwroot/manifest/manifest-1.1.json
+++ b/skills/csharp/todoskill/wwwroot/manifest/manifest-1.1.json
@@ -101,7 +101,7 @@
         "$ref": "#/definitions/todoInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/todoList"
+        "$ref": "#/definitions/todoListInfo"
       }
     },
     "deleteToDo": {
@@ -112,7 +112,7 @@
         "$ref": "#/definitions/todoInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/todoList"
+        "$ref": "#/definitions/todoListInfo"
       }
     },
     "deleteAll": {
@@ -134,7 +134,7 @@
         "$ref": "#/definitions/todoInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/todoList"
+        "$ref": "#/definitions/todoListInfo"
       }
     },
     "markAll": {
@@ -156,7 +156,7 @@
         "$ref": "#/definitions/listInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/todoList"
+        "$ref": "#/definitions/todoListInfo"
       }
     }
   },
@@ -183,11 +183,20 @@
         }
       }
     },
-    "todoList": {
-      "type": "array",
-      "description": "List of todo tasks",
-      "items": {
-        "type": "string"
+    "todoListInfo": {
+      "type": "object",
+      "properties": {
+        "actionSuccess": {
+          "type": "bool",
+          "description": "result of action"
+        },
+        "todoList": {
+          "type": "array",
+          "description": "List of todo tasks",
+          "items": {
+            "type": "string"
+          }
+        }
       }
     },
     "actionResult": {
