--- a/skills/csharp/calendarskill/wwwroot/manifest/manifest-1.0.json
+++ b/skills/csharp/calendarskill/wwwroot/manifest/manifest-1.0.json
@@ -31,7 +31,7 @@
         "$ref": "#/definitions/eventInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/operationStatus"
+        "$ref": "#/definitions/actionResult"
       }
     },
     "updateEvent": {
@@ -42,7 +42,7 @@
         "$ref": "#/definitions/updateEventInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/operationStatus"
+        "$ref": "#/definitions/actionResult"
       }
     },
     "showEvent": {
@@ -64,7 +64,7 @@
         "$ref": "#/definitions/chooseEventInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/operationStatus"
+        "$ref": "#/definitions/actionResult"
       }
     },
     "deleteEvent": {
@@ -75,7 +75,7 @@
         "$ref": "#/definitions/chooseEventInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/operationStatus"
+        "$ref": "#/definitions/actionResult"
       }
     },
     "joinEvent": {
@@ -86,7 +86,7 @@
         "$ref": "#/definitions/chooseEventInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/operationStatus"
+        "$ref": "#/definitions/actionResult"
       }
     },
     "timeRemaining": {
@@ -135,19 +135,19 @@
         },
         "startDate": {
           "type": "string",
-          "description": "Start date of the meeting in YYYY-MM-DD format"
+          "description": "Start date of the meeting in yyyy-MM-dd format"
         },
         "startTime": {
           "type": "string",
-          "description": "Start time of the meeting in HH-MM format"
+          "description": "Start time of the meeting in HH:mm format"
         },
         "endDate": {
           "type": "string",
-          "description": "End date of the meeting in YYYY-MM-DD format"
+          "description": "End date of the meeting in yyyy-MM-dd format"
         },
         "endTime": {
           "type": "string",
-          "description": "End time of the meeting in HH-MM format"
+          "description": "End time of the meeting in HH:mm format"
         },
         "duration": {
           "type": "number",
@@ -156,6 +156,18 @@
         "location": {
           "type": "string",
           "description": "The location for the meeting"
+        },
+        "meetingRoom": {
+          "type": "string",
+          "description": "The meeting room for the meeting"
+        },
+        "building": {
+          "type": "string",
+          "description": "Building of the meeting room"
+        },
+        "floorNumber": {
+          "type": "number",
+          "description": "Floor number of the meeting room"
         },
         "timezone": {
           "type": "string",
@@ -173,19 +185,19 @@
         },
         "startDate": {
           "type": "string",
-          "description": "Current start date of the meeting in YYYY-MM-DD format"
+          "description": "Current start date of the meeting in yyyy-MM-dd format"
         },
         "startTime": {
           "type": "string",
-          "description": "Current start time of the meeting in HH-MM format"
+          "description": "Current start time of the meeting in HH:mm format"
         },
         "newStartDate": {
           "type": "string",
-          "description": "New start date of the meeting in YYYY-MM-DD format"
+          "description": "New start date of the meeting in yyyy-MM-dd format"
         },
         "newStartTime": {
           "type": "string",
-          "description": "New start time of the meeting in HH-MM format"
+          "description": "New start time of the meeting in HH:mm format"
         },
         "moveTimeSpan": {
           "type": "number",
@@ -211,11 +223,11 @@
         },
         "startDate": {
           "type": "string",
-          "description": "Start date of the meeting in YYYY-MM-DD format"
+          "description": "Start date of the meeting in yyyy-MM-dd format"
         },
         "startTime": {
           "type": "string",
-          "description": "Start time of the meeting in HH-MM format"
+          "description": "Start time of the meeting in HH:mm format"
         },
         "timezone": {
           "type": "string",
@@ -223,12 +235,25 @@
         }
       }
     },
-    "operationStatus": {
+    "actionResult": {
       "type": "object",
       "properties": {
-        "status": {
+        "actionSuccess": {
           "type": "boolean",
-          "description": "An operation status indicating success or failure"
+          "description": "Result of action"
+        }
+      }
+    },
+    "dateInfo": {
+      "type": "object",
+      "properties": {
+        "date": {
+          "type": "string",
+          "description": "Date of the meetings in yyyy-MM-dd format"
+        },
+        "timezone": {
+          "type": "string",
+          "description": "The current user's timezone"
         }
       }
     },
@@ -241,23 +266,73 @@
         }
       }
     },
-    "dateInfo": {
+    "eventInfoOutput": {
       "type": "object",
+      "required": [],
       "properties": {
-        "date": {
+        "title": {
           "type": "string",
-          "description": "Date of the meetings in YYYY-MM-DD format"
+          "description": "Title of the meeting"
+        },
+        "content": {
+          "type": "string",
+          "description": "Description of the meeting"
+        },
+        "attendees": {
+          "type": "string",
+          "description": "Semicolon separated list of email addresses to invite"
+        },
+        "startDate": {
+          "type": "string",
+          "description": "Start date of the meeting in yyyy-MM-dd format"
+        },
+        "startTime": {
+          "type": "string",
+          "description": "Start time of the meeting in HH:mm format"
+        },
+        "endDate": {
+          "type": "string",
+          "description": "End date of the meeting in yyyy-MM-dd format"
+        },
+        "endTime": {
+          "type": "string",
+          "description": "End time of the meeting in HH:mm format"
+        },
+        "duration": {
+          "type": "number",
+          "description": "The duration of the meeting in minutes"
+        },
+        "location": {
+          "type": "string",
+          "description": "The location for the meeting"
         },
         "timezone": {
           "type": "string",
-          "description": "The current user's timezone"
+          "description": "The timezone to create the meeting in"
+        },
+        "meetingRoom": {
+          "type": "string",
+          "description": "The meeting room for the meeting"
+        },
+        "actionSuccess": {
+          "type": "boolean",
+          "description": "Result of action"
         }
       }
     },
     "eventSummary": {
-      "type": "array",
-      "items": {
-        "$ref": "#/definitions/eventInfo"
+      "type": "object",
+      "properties": {
+        "actionSuccess": {
+          "type": "boolean",
+          "description": "Result of action"
+        },
+        "eventList": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/eventInfo"
+          }
+        }
       }
     }
   }
