[ITSM] update and before tool

--- a/skills/csharp/experimental/itsmskill/appsettings.json
+++ b/skills/csharp/experimental/itsmskill/appsettings.json
@@ -18,7 +18,7 @@
   "cosmosDb": {
     "authkey": "",
     "cosmosDBEndpoint": "",
-    "collectionId": "botstate-collection",
+    "containerId": "botstate-collection",
     "databaseId": "botstate-db"
   },
   "serviceNowUrl": "https://instance.service-now.com",
