--- a/skills/csharp/experimental/itsmskill/Content/Knowledge.json
+++ b/skills/csharp/experimental/itsmskill/Content/Knowledge.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "type": "AdaptiveCard",
   "id": "KnowledgeCard",
   "body": [
@@ -33,7 +33,7 @@
                   "horizontalAlignment": "Left",
                   "size": "Medium",
                   "color": "Light",
-                  "text": "{Title}",
+                  "text": "${if(Data.Title == null, '', Data.Title)}",
                   "wrap": true
                 }
               ],
@@ -45,20 +45,20 @@
           "type": "TextBlock",
           "size": "Small",
           "color": "Light",
-          "text": "{UpdatedTime}"
+          "text": "${if(Data.UpdatedTime == null, '', Data.UpdatedTime)}"
         },
         {
           "type": "TextBlock",
           "size": "Small",
           "color": "Light",
-          "text": "{Number}"
+          "text": "${if(Data.Number == null, '', Data.Number)}"
         }
       ]
     },
     {
       "type": "TextBlock",
       "wrap": true,
-      "text": "{Content}",
+      "text": "${if(Data.Content == null, '', Data.Content)}",
       "maxLines": 5
     },
     {
@@ -66,8 +66,8 @@
       "actions": [
         {
           "type": "Action.OpenUrl",
-          "title": "{UrlTitle}",
-          "url": "{UrlLink}"
+          "title": "${if(Data.UrlTitle == null, '', Data.UrlTitle)}",
+          "url": "${if(Data.UrlLink == null, '', Data.UrlLink)}"
         }
       ]
     },
@@ -80,12 +80,13 @@
           "horizontalAlignment": "Right",
           "size": "Small",
           "color": "default",
-          "text": "{ProviderDisplayText}"
+          "text": "${if(Data.ProviderDisplayText == null, '', Data.ProviderDisplayText)}"
         }
       ]
     }
   ],
   "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
   "version": "1.0",
-  "speak": "{Speak}"
+  "speak": "${if(Data.Speak == null, '', Data.Speak)}"
 }
+
