fixes; add IsAction and logic, actionSuccess, tests

--- a/skills/csharp/pointofinterestskill/wwwroot/manifest/manifest-1.1.json
+++ b/skills/csharp/pointofinterestskill/wwwroot/manifest/manifest-1.1.json
@@ -228,6 +228,10 @@
     "singleDestinationResponse": {
       "type": "object",
       "properties": {
+        "actionSuccess": {
+          "type": "bool",
+          "description": "Result of the action."
+        },
         "name": {
           "type": "string",
           "description": "Destination's name."
