--- a/skills/csharp/pointofinterestskill/wwwroot/manifest/manifest-1.0.json
+++ b/skills/csharp/pointofinterestskill/wwwroot/manifest/manifest-1.0.json
@@ -164,6 +164,10 @@
     "singleDestinationResponse": {
       "type": "object",
       "properties": {
+        "actionSuccess": {
+          "type": "bool",
+          "description": "Result of the action."
+        },
         "name": {
           "type": "string",
           "description": "Destination's name."
